# fourierchords

./: Cargo.toml  README.md  bundler.toml
src/: lib.rs  note_detection.rs
