[package]
name = "fourierchords"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Miller <njmiller1208@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/nicolasnotcage"
description = "A utility to read notes from incoming audio using FFT."

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
rustfft = "6.1.0"
ordered-float = "4.1.1"
egui = "0.24.1"
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
